<resources>
    <string name="app_name">DnDCharacterCompanion</string>
    <string name="add_character">Add Character</string>
    <string name="cha">CHA:</string>
    <string name="wis">WIS:</string>
    <string name="Int">INT:</string>
    <string name="con">CON:</string>
    <string name="dex">DEX:</string>
    <string name="str">STR:</string>
    <string name="ac">AC:</string>
    <string name="hp">HP:</string>
    <string name="level">Level:</string>
    <string name="Class">Class:</string>
    <string name="race">Race:</string>
    <string name="name">Name:</string>
    <string name="character_resources">Class Resources</string>
    <string name="character_details">Character Details</string>
    <string name="character_stats">Character Stats</string>
    <string name="character_skill_proficiencies">Character Skill Proficiencies</string>
    <string name="acrobatics">Acrobatics</string>
    <string name="athletics">Athletics</string>
    <string name="animal_handling">Animal Handling</string>
    <string name="arcana">Arcana</string>
    <string name="deception">Deception</string>
    <string name="history">History</string>
    <string name="insight">Insight</string>
    <string name="intimidation">Intimidation</string>
    <string name="investigation">Investigation</string>
    <string name="medicine">Medicine</string>
    <string name="nature">Nature</string>
    <string name="perception">Perception</string>
    <string name="performance">Performance</string>
    <string name="persuasion">Persuasion</string>
    <string name="religion">Religion</string>
    <string name="stealth">Stealth</string>
    <string name="survival">Survival</string>
    <string name="slight_of_hand">Slight of Hand</string>
    <string name="save">Save</string>
</resources>