<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/character_details"
            android:id="@+id/CharacterDetails"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/characterNameLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/CharacterDetails"
            app:layout_constraintRight_toLeftOf="@+id/characterName"
            android:text="@string/name"
            />

        <EditText
            android:id="@+id/characterName"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/CharacterDetails"
            app:layout_constraintLeft_toRightOf="@+id/characterNameLabel"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/characterRaceLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterNameLabel"
            app:layout_constraintRight_toLeftOf="@+id/characterRace"
            android:text="@string/race"
            />

        <EditText
            android:id="@+id/characterRace"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterNameLabel"
            app:layout_constraintLeft_toRightOf="@+id/characterRaceLabel"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/characterClassLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterRaceLabel"
            app:layout_constraintRight_toLeftOf="@+id/characterClass"
            android:text="@string/Class"
            />

        <EditText
            android:id="@+id/characterClass"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterRaceLabel"
            app:layout_constraintLeft_toRightOf="@+id/characterClassLabel"
            android:inputType="text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/character_resources"
            android:id="@+id/CharacterResources"
            app:layout_constraintTop_toBottomOf="@+id/characterClassLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/characterLevelLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/CharacterResources"
            app:layout_constraintRight_toLeftOf="@+id/characterLevel"
            android:text="@string/level"
            />

        <EditText
            android:id="@+id/characterLevel"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/CharacterResources"
            app:layout_constraintLeft_toRightOf="@+id/characterLevelLabel"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/characterHealthLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterLevelLabel"
            app:layout_constraintRight_toLeftOf="@+id/characterHealth"
            android:text="@string/hp"
            />

        <EditText
            android:id="@+id/characterHealth"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterLevelLabel"
            app:layout_constraintLeft_toRightOf="@+id/characterHealthLabel"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/characterACLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterHealthLabel"
            app:layout_constraintRight_toLeftOf="@+id/characterAC"
            android:text="@string/ac"
            />

        <EditText
            android:id="@+id/characterAC"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterHealthLabel"
            app:layout_constraintLeft_toRightOf="@+id/characterACLabel"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/character_stats"
            android:id="@+id/CharacterStats"
            app:layout_constraintTop_toBottomOf="@+id/characterAC"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/characterSTRLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/CharacterStats"
            app:layout_constraintRight_toLeftOf="@+id/characterSTR"
            android:text="@string/str"
            />

        <EditText
            android:id="@+id/characterSTR"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/CharacterStats"
            app:layout_constraintLeft_toRightOf="@+id/characterSTRLabel"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/characterDEXLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterSTRLabel"
            app:layout_constraintRight_toLeftOf="@+id/characterDEX"
            android:text="@string/dex"
            />

        <EditText
            android:id="@+id/characterDEX"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterSTRLabel"
            app:layout_constraintLeft_toRightOf="@+id/characterDEXLabel"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/characterCONLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterDEXLabel"
            app:layout_constraintRight_toLeftOf="@+id/characterCON"
            android:text="@string/con"
            />

        <EditText
            android:id="@+id/characterCON"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterDEXLabel"
            app:layout_constraintLeft_toRightOf="@+id/characterCONLabel"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/characterINTLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterCONLabel"
            app:layout_constraintRight_toLeftOf="@+id/characterINT"
            android:text="@string/Int"
            />

        <EditText
            android:id="@+id/characterINT"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterCONLabel"
            app:layout_constraintLeft_toRightOf="@+id/characterINTLabel"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/characterWISLabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterINTLabel"
            app:layout_constraintRight_toLeftOf="@+id/characterWIS"
            android:text="@string/wis"
            />

        <EditText
            android:id="@+id/characterWIS"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterINTLabel"
            app:layout_constraintLeft_toRightOf="@+id/characterWISLabel"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/characterCHALabel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterWISLabel"
            app:layout_constraintRight_toLeftOf="@+id/characterCHA"
            android:text="@string/cha"
            />

        <EditText
            android:id="@+id/characterCHA"
            android:layout_width="360dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/characterWISLabel"
            app:layout_constraintLeft_toRightOf="@+id/characterCHALabel"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/character_skill_proficiencies"
            android:id="@+id/CharacterSkills"
            app:layout_constraintTop_toBottomOf="@+id/characterCHA"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <CheckBox
            android:text="@string/acrobatics"
            android:id="@+id/characterAcrobatics"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/CharacterSkills"
            app:layout_constraintRight_toLeftOf="@id/characterAthletics"
            />
        <CheckBox
            android:text="@string/athletics"
            android:id="@+id/characterAthletics"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/CharacterSkills"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
        <CheckBox
            android:text="@string/animal_handling"
            android:id="@+id/characterAnHand"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/CharacterSkills"
            app:layout_constraintLeft_toRightOf="@id/characterAthletics"/>
        <CheckBox
            android:text="@string/arcana"
            android:id="@+id/characterArcana"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterAcrobatics"
            app:layout_constraintRight_toLeftOf="@id/characterDeception"

            />
        <CheckBox
            android:text="@string/deception"
            android:id="@+id/characterDeception"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterAcrobatics"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
        <CheckBox
            android:text="@string/history"
            android:id="@+id/characterHistory"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterAthletics"
            app:layout_constraintLeft_toRightOf="@id/characterDeception"/>
        <CheckBox
            android:text="@string/insight"
            android:id="@+id/characterInsight"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterArcana"
            app:layout_constraintRight_toLeftOf="@id/characterIntimidation"/>
        <CheckBox
            android:text="@string/intimidation"
            android:id="@+id/characterIntimidation"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterArcana"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <CheckBox
            android:text="@string/investigation"
            android:id="@+id/characterInvestigation"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterDeception"
            app:layout_constraintLeft_toRightOf="@id/characterDeception"/>
        <CheckBox
            android:text="@string/medicine"
            android:id="@+id/characterMedicine"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterInsight"
            app:layout_constraintRight_toLeftOf="@id/characterAthletics"/>
        <CheckBox
            android:text="@string/nature"
            android:id="@+id/characterNature"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterIntimidation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <CheckBox
            android:text="@string/perception"
            android:id="@+id/characterPerception"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterInvestigation"
            app:layout_constraintLeft_toRightOf="@id/characterDeception"/>
        <CheckBox
            android:text="@string/performance"
            android:id="@+id/characterPerformance"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterMedicine"
            app:layout_constraintRight_toLeftOf="@id/characterAthletics"/>
        <CheckBox
            android:text="@string/persuasion"
            android:id="@+id/characterPersuasion"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterNature"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <CheckBox
            android:text="@string/religion"
            android:id="@+id/characterReligion"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterPerception"
            app:layout_constraintLeft_toRightOf="@id/characterDeception"/>
        <CheckBox
            android:text="@string/stealth"
            android:id="@+id/characterStealth"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterPerformance"
            app:layout_constraintRight_toLeftOf="@id/characterAthletics"/>
        <CheckBox
            android:text="@string/survival"
            android:id="@+id/characterSurvival"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterPersuasion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <CheckBox
            android:text="@string/slight_of_hand"
            android:id="@+id/characterSoH"
            android:layout_width="115dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/characterReligion"
            app:layout_constraintLeft_toRightOf="@id/characterDeception"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>