<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/character_details"
        android:id="@+id/CharacterDetails"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/characterNameLabel"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/CharacterDetails"
        app:layout_constraintRight_toLeftOf="@+id/characterName"
        android:text="@string/name"
        />

    <TextView
        android:id="@+id/characterName"
        android:layout_width="360dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/CharacterDetails"
        app:layout_constraintLeft_toRightOf="@+id/characterNameLabel"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/characterRaceLabel"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/characterNameLabel"
        app:layout_constraintRight_toLeftOf="@+id/characterRace"
        android:text="@string/race"
        />

    <TextView
        android:id="@+id/characterRace"
        android:layout_width="360dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/characterNameLabel"
        app:layout_constraintLeft_toRightOf="@+id/characterRaceLabel"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/characterClassLabel"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/characterRaceLabel"
        app:layout_constraintRight_toLeftOf="@+id/characterClass"
        android:text="@string/Class"
        />

    <TextView
        android:id="@+id/characterClass"
        android:layout_width="360dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/characterRaceLabel"
        app:layout_constraintLeft_toRightOf="@+id/characterClassLabel"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/character_resources"
        android:id="@+id/CharacterResources"
        app:layout_constraintTop_toBottomOf="@+id/characterClassLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/characterLevelLabel"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/CharacterResources"
        app:layout_constraintRight_toLeftOf="@+id/characterLevel"
        android:text="@string/level"
        />

    <TextView
        android:id="@+id/characterLevel"
        android:layout_width="360dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/CharacterResources"
        app:layout_constraintLeft_toRightOf="@+id/characterLevelLabel"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/characterHealthLabel"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/characterLevelLabel"
        app:layout_constraintRight_toLeftOf="@+id/characterHealth"
        android:text="@string/hp"
        />

    <TextView
        android:id="@+id/characterHealth"
        android:layout_width="360dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/characterLevelLabel"
        app:layout_constraintLeft_toRightOf="@+id/characterHealthLabel"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/characterACLabel"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/characterHealthLabel"
        app:layout_constraintRight_toLeftOf="@+id/characterAC"
        android:text="@string/ac"
        />

    <TextView
        android:id="@+id/characterAC"
        android:layout_width="360dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/characterHealthLabel"
        app:layout_constraintLeft_toRightOf="@+id/characterACLabel"
        android:inputType="number"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/character_stats"
        android:id="@+id/CharacterStats"
        app:layout_constraintTop_toBottomOf="@+id/characterAC"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:text="STR"
        android:id="@+id/strengthLabel"
        android:textSize="18sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/strengthButton"
        app:layout_constraintRight_toRightOf="@id/strengthButton"
        app:layout_constraintTop_toBottomOf="@id/CharacterStats"
        />
    <Button
        android:id="@+id/strengthButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/strengthLabel"
        />



    <TextView
        android:text="DEX"
        android:id="@+id/dexterityLabel"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/strengthButton"
        app:layout_constraintRight_toRightOf="@id/strengthButton"
        app:layout_constraintTop_toBottomOf="@id/strengthButton"
        />
    <Button
        android:id="@+id/dexterityButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dexterityLabel"
        />

    <TextView
        android:text="CON"
        android:id="@+id/constitutionLabel"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/strengthButton"
        app:layout_constraintRight_toRightOf="@id/strengthButton"
        app:layout_constraintTop_toBottomOf="@id/dexterityButton"
        />
    <Button
        android:id="@+id/constitutionButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constitutionLabel"
        />


    <TextView
        android:text="INT"
        android:id="@+id/intelligenceLabel"
        android:textSize="18sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/intelligenceButton"
        app:layout_constraintRight_toRightOf="@id/intelligenceButton"
        app:layout_constraintTop_toBottomOf="@id/CharacterStats"
        />
    <Button
        android:id="@+id/intelligenceButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/strengthLabel"
        />



    <TextView
        android:text="WIS"
        android:id="@+id/wisdomLabel"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/intelligenceButton"
        app:layout_constraintRight_toRightOf="@id/intelligenceButton"
        app:layout_constraintTop_toBottomOf="@id/strengthButton"
        />
    <Button
        android:id="@+id/wisdomButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dexterityLabel"
        />

    <TextView
        android:text="CHA"
        android:id="@+id/charismaLabel"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/intelligenceButton"
        app:layout_constraintRight_toRightOf="@id/intelligenceButton"
        app:layout_constraintTop_toBottomOf="@id/dexterityButton"
        />
    <Button
        android:id="@+id/charismaButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constitutionLabel"
        />


</androidx.constraintlayout.widget.ConstraintLayout>